# CS_5th_semester

./: .gitignore
Korman/1_introduction/: exercise_1.cpp  exercise_3.cpp
MPI/laba1/: 3d_build_trial.ipynb  build_plots.py  dump.txt  solve_equation.cpp
MPI/laba1/calculate/inc/: calculate.h  io.h
MPI/laba1/calculate/src/: calculate.cpp  io.cpp
johnson/: graph.cpp  graph.h  johnson.cpp  johnson.h  main.cpp
parproga/laba1/: .gitignore  CMakeLists.txt  README.md  build_plots.py  consequent.cpp  mpi_centered.cpp  mpi_squared.cpp  mpi_triangle.cpp
parproga/laba1/mpi/: CMakeLists.txt
parproga/laba1/mpi/inc/: calculate.h  equation.h  io.h
parproga/laba1/mpi/src/: calculate.cpp  equation.cpp  io.cpp
parproga/laba2/: CMakeLists.txt  core.c  main.c
parproga/laba2/my_threads/: CMakeLists.txt
parproga/laba2/my_threads/inc/: memory.h  method.h  queue.h  run_config.h  thread_calculate.h  thread_work.h
parproga/laba2/my_threads/src/: method.c  queue.c  thread_calculate.c  thread_work.c
splay_tree/: CMakeLists.txt  main.cpp
splay_tree/SplayTree/: CMakeLists.txt
splay_tree/SplayTree/inc/: splay_tree.h  splay_tree_debug.h
splay_tree/SplayTree/src/: splay_tree_debug.cpp
